--- a/src/App.css
+++ b/src/App.css
@@ -325,15 +325,11 @@ nav {
 }
 
 .project-container img {
-  width: 100%;
-  height: 100%;
+  width: 90%;
+  height: 90%;
   border: 5px solid #212529;
   outline: 2px solid #3a3a3a;
   border-radius: 5px;
-}
-
-.project-container .app-img {
-  padding-left: 2rem;
 }
 
 .project-container h1 {
@@ -540,6 +536,13 @@ nav {
 
 /* ------------------------------- media queries --------------------------------------- */
 
+
+/* ------------- 320px ------------------- */
+@media screen and (max-width: 320px) {
+  .project-container .app-img {
+    width: 90vw;
+  }
+}
 
 /* ------------- 595px ------------------- */
 @media screen and (max-width: 595px) {
